--- a/config.yaml
+++ b/config.yaml
@@ -8,6 +8,7 @@ netmask: 255.255.255.0
 gateway_ip: 192.168.5.2
 dns_server_1: 192.168.5.2
 dns_server_2:
+# Change the followings to real values
 ecom_url: ***** 
 ecom_login: *****
 ecom_passwd: '*****'
